--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "modernizr": "~2.7.1",
     "handlebars": "~1.3.0",
     "underscore": "~1.7.0",
-    "moment": "~2.8.4"
+    "moment": "~2.8.4",
+    "bootstrap-datepicker": "~1.3.1"
   },
   "devDependencies": {}
 }
